sleeper changes